--- a/src/MovieList/styles.scss
+++ b/src/MovieList/styles.scss
@@ -52,6 +52,7 @@ sans-serif;
     .data {
       color: $white;
       transform: translateY(calc(70px + 4em));
+      background: linear-gradient(#0000008f, #000);
     }
      .date * {
       margin-left: 5px;
