--- a/src/MovieList/styles.scss
+++ b/src/MovieList/styles.scss
@@ -16,7 +16,9 @@ sans-serif;
       clear: both;
     }
 }
-
+.header:hover {
+  background-color: #0d0d0dc2;
+}
 .card-2 {
     .wrapper {
       background: url(https://tvseriescritic.files.wordpress.com/2016/10/stranger-things-bicycle-lights-children.jpg) center / cover no-repeat;
