--- a/src/MovieDetail/styles.scss
+++ b/src/MovieDetail/styles.scss
@@ -43,7 +43,7 @@
     
   }
   .meta-score-container {
-    margin-right: 5px;
+    margin-right: 2rem;
   }
   .meta-score{
       padding: 3px;
@@ -59,6 +59,10 @@
     margin-left: 35%;
     color: white;
     font-size: 1.1rem;
+  }
+  .runtime{
+    display: inline;
+    margin-right: 2rem;
   }
   .cover {
     position: absolute;
